--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ body::before {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url("/src/images/pokeball_logo.png");
+  background-image: url("/pokeball_logo.png");
   background-repeat: repeat;
   background-size: 120px 120px;
   opacity: 0.02;
